# libawful

./: .travis.yml  CMakeLists.txt  README.md
cmake/: compile_fail.cmake
include/: awful.hpp
test/: noncopyable.cpp  noncopyable.fail.assign.cpp  noncopyable.fail.cnstr1.cpp  noncopyable.fail.cnstr2.cpp  noncopyable.fail.cnstr3.cpp  overview.fail.cpp  trapcomma.cpp  trapcomma.fail.comma1.cpp  trapcomma.fail.comma2.cpp  trapconstructible.cpp  trapconstructible.fail.cnstr1.cpp  trapconstructible.fail.cnstr2.cpp  trapconstructible.fail.cnstr3.cpp  trapconstructible.fail.cnstr4.cpp  trapconstructible.fail.copy1.cpp  trapconstructible.fail.copy2.cpp  trapconstructible.fail.copy3.cpp
